--- a/webclient/javascript/tests/edit/edit.html
+++ b/webclient/javascript/tests/edit/edit.html
@@ -7,6 +7,7 @@
 <body>
 	<h1>Hello world</h1>
 	<div id="out"></div>
+	<div><input type="button" value="Bold" onclick="editor.bold();"></div>
 	<div id="out2" contentEditable="true" style="border:1px solid black"></div>
 	<br><br>
 	<div id="out3" contentEditable="true" style="border:1px solid blue"></div>
@@ -366,7 +367,7 @@ DomIterator.prototype.deleteChars = function( count )
 			}
 			// Need to delete more?
 			if ( count > 0 )
-				this.deleteChars( count );		
+				this.deleteChars( count );
 		}
 		// Delete only some part of the text node?
 		else
@@ -380,7 +381,7 @@ DomIterator.prototype.deleteChars = function( count )
 					this.current = t;
 				else
 					this.current = this.current.parentNode.nextSibling;
-				this.deleteChars( count );		
+				this.deleteChars( count );
 			}
 		}
 	}
@@ -745,6 +746,17 @@ Editor.prototype.keydown = function(e)
 	
 	window.console.log("Line No " + line.lineno.toString() + " and pos " + charCount.toString() );
 	
+	// Delete selection?
+	if ( !sel.isCollapsed )
+	{
+		window.console.log("DeleteSelection");
+		e.stopPropagation();
+		e.preventDefault();
+
+		this.deleteSelection();
+		return;
+	}
+	
 	// Backspace?
 	if ( e.keyCode == 8 )
 	{
@@ -1000,6 +1012,110 @@ Editor.prototype.isEmptyElement = function(node)
 		if ( !this.isEmptyElement( node.childNodes[i] ) )
 			return false;
 	return true;
+};
+
+Editor.prototype.bold = function()
+{
+	var sel = window.getSelection();
+	var selDom = sel.anchorNode;
+	var selOffset = sel.anchorOffset;
+	
+	if ( sel.isCollapsed )
+		return;
+
+	var pos1 = this.getLinePosition( sel.anchorNode, sel.anchorOffset );
+	var pos2 = this.getLinePosition( sel.focusNode, sel.focusOffset );
+	
+	if ( pos2.lineno < pos1.lineno || ( pos2.lineno == pos1.lineno && pos2.charCount < pos1.charCount ) )
+	{
+		var tmp = pos2;
+		pos2 = pos1;
+		pos1 = tmp;
+	}
+	
+	var element1 = this.getElementByLineNo( pos1.lineno );
+	var docpos1 = element1.itemCountBefore() + 2 + pos1.charCount;
+	var element2 = this.getElementByLineNo( pos2.lineno );
+	var docpos2 = element2.itemCountBefore() + 2 + pos2.charCount;
+
+	var ops = new protocol.ProtocolDocumentOperation();
+	ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount( docpos1 ) );
+	ops.component.push( protocol.ProtocolDocumentOperation.newAnnotationBoundary( [], [ protocol.ProtocolDocumentOperation.newKeyValueUpdate( "font-weight", null, "bold" ) ] ) );	
+	ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount( docpos2 - docpos1 ) );
+	ops.component.push( protocol.ProtocolDocumentOperation.newAnnotationBoundary( [ "font-weight" ], [ ] ) );
+	ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount( this.doc.itemCount() - docpos2 ) );
+	ops.applyTo( this.doc );
+	
+	sel.collapse( selDom, selOffset );
+};
+
+Editor.prototype.deleteSelection = function()
+{
+	var sel = window.getSelection();
+	var selDom = sel.anchorNode;
+	var selOffset = sel.anchorOffset;
+	
+	if ( sel.isCollapsed )
+		return;
+
+	var pos1 = this.getLinePosition( sel.anchorNode, sel.anchorOffset );
+	var pos2 = this.getLinePosition( sel.focusNode, sel.focusOffset );
+	
+	if ( pos2.lineno < pos1.lineno || ( pos2.lineno == pos1.lineno && pos2.charCount < pos1.charCount ) )
+	{
+		var tmp = pos2;
+		pos2 = pos1;
+		pos1 = tmp;
+	}
+	
+	var element1 = this.getElementByLineNo( pos1.lineno );
+	var docpos1 = element1.itemCountBefore() + 2 + pos1.charCount;
+	var element2 = this.getElementByLineNo( pos2.lineno );
+	var docpos2 = element2.itemCountBefore() + 2 + pos2.charCount;
+
+	var ops = new protocol.ProtocolDocumentOperation();
+	ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount( docpos1 ) );
+	for( var i = docpos1; i < docpos2; ++i )
+	{
+		var c = this.doc.getItemAt(i);
+		if ( typeof(c) == "string" )
+			ops.component.push( protocol.ProtocolDocumentOperation.newDeleteCharacters( c ) );
+		else if ( c.element_start )
+			ops.component.push( protocol.ProtocolDocumentOperation.newDeleteElementStartFromElement( c ) );
+		else
+			ops.component.push( protocol.ProtocolDocumentOperation.newDeleteElementEnd() );
+	}
+	ops.component.push( protocol.ProtocolDocumentOperation.newRetainItemCount( this.doc.itemCount() - docpos2 ) );
+	ops.applyTo( this.doc );
+	
+	sel.collapse( selDom, selOffset );
+};
+
+Editor.prototype.getLinePosition = function(selDom, selOffset)
+{
+	var charCount = selDom.nodeType == 3 ? selOffset : 0;
+	var lineno = 0;
+	// Count the number of characters
+	var line = selDom;
+	while( line.nodeType != 1 || line.nodeName != "DIV" )
+	{
+		var p = line.previousSibling;
+		while( p )
+		{
+			charCount += this.charCount(p);
+			p = p.previousSibling;
+		}
+		line = line.parentNode;
+	}
+	// Find the line number
+	var l = line.previousSibling;
+	while( l )
+	{
+		lineno++;
+		l = l.previousSibling;
+	}
+	
+	return { line : line, lineno : lineno, charCount : charCount };
 };
 
 var doc = new JSOT.Doc();
